<resources>
    <string name="app_name">OggySocial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_btn_description">Back</string>
    <string name="what_is_your_birthday">Ngày sinh của bạn</string>
    <string name="birthday_description">Chọn ngày sinh của bạn. Bạn luôn có thể đặt thông tin này ở chế độ riêng tư vào lúc khác.</string>
    <string name="your_birthday">Ngày sinh của bạn</string>
    <string name="required_input">Không được để trống</string>
    <string name="what_is_your_email">Thông tin đăng nhập</string>
    <string name="email">Email</string>
    <string name="repassword_hint">Nhập lại mật khẩu</string>
    <string name="required_birthday">Vui lòng chọn ngày sinh</string>
    <string name="required_email">Yêu cầu nhập email</string>
    <string name="invalid_email">Email phải đúng định dạng</string>
    <string name="required_password">Yêu cầu nhập mật khẩu</string>
    <string name="invalid_password">Mật khẩu phải từ 8–32 ký tự</string>
    <string name="confirm">Xác nhận</string>
    <string name="search">Tìm kiếm</string>
    <string name="home">Trang chủ</string>
    <string name="profile">Hồ sơ</string>
    <string name="setting">Cài đặt</string>
    <string name="author_avatar">author avatar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipisLorem ipsum dolor sit amet, consectetur adipiscing elit. Consetetur pariatur nihil accumsan reprehenderit eirmod luptatum labore elit quis cillum aliquyam placerat. Sunt nihil dignissim id. Sanctus ea ex exercitation lorem sadipscing tempor. Elit dolores pariatur. Nobis accumsan labore.</string>
    <string name="todo">TODO</string>
    <string name="thinking">Bạn đang nghĩ gì?</string>
    <string name="like">Thích</string>
    <string name="comment">Bình luận</string>
    <string name="cover_image">Ảnh bìa</string>
    <string name="create_new_post">Đăng bài</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="profile_info">Thông tin cá nhân</string>
    <string name="logout">Đăng xuất</string>
    <string name="add_friend">Thêm bạn</string>
    <string name="post_it">Đăng</string>
    <string name="write_your_thinking">Hãy viết cảm nghĩ của bạn…</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="delete_post">Xóa bài viết</string>
    <string name="edit_post">Chỉnh sửa bài viết</string>
    <string name="update_post_title">Chỉnh sửa bài viết</string>
    <string name="save">Lưu</string>
    <string name="password_not_match">Mật khẩu không khớp</string>
    <string name="lets_reset_password">Nếu quên mật khẩu hãy nhập email của bạn để lấy lại mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="email_is_exist">Email này đã được đăng ký</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="reset_password_success">Đã gửi đường dẫn đặt lại mật khẩu vào email</string>
    <string name="email_not_exist">Email này không được đăng ký với người dùng nào</string>
    <string name="newname">Tên bạn muốn thay đổi là gì</string>
    <string name="newbirth">Ngày sinh bạn muốn thay đổi</string>
    <string name="add_comment">Thêm bình luận</string>
    <string name="add_comment_hint">Thêm bình luận</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="monthly_post_analysis">Thống kê bài đăng theo tháng</string>
    <string name="must_enough_age">Bạn phải đủ 18 tuổi</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user">Người dùng</string>
    <string name="number_post">Số bài post</string>
    <string name="total_users">Tổng số người dùng</string>
    <string name="total_posts">Tống số bài đăng</string>
    <string name="notification">Thông báo</string>
    <string name="accept">Chấp nhận</string>
    <string name="reject">Từ chối</string>
    <string name="sent_request_to_you">đã gửi cho bạn lời mời kết bạn</string>
    <string name="channel_name">oggy</string>
    <string name="channel_description">oggy</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="edit_infomation">Chỉnh sửa thông tin</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="required_info">Bạn phải điền đầy đủ thông tin</string>
    <string name="change_pass_success">Đổi mật khẩu thành công</string>
    <string name="remove_friend">Hủy kết bạn</string>
    <string name="cancel_request">Hủy lời mời</string>
    <string name="blocked_users">Đã chặn</string>
</resources>
