<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/medium_padding"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/small_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/small_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAuthorImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/tvAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:text="Oggy"
            android:textSize="16sp"
            android:textStyle="bold" />
        <!--        TODO : add option for post-->
    </LinearLayout>

    <TextView
        android:id="@+id/tvPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/lorem" />


    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:padding="@dimen/small_padding">

        <TextView
            android:id="@+id/tvLikeCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_padding"
            android:text="11K"
            app:drawableStartCompat="@drawable/heart_solid" />

        <TextView
            android:id="@+id/tvCommentCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="444 bình luận" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/smaller_padding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLike"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/medium_padding"
            android:drawableLeft="@drawable/heart_solid"
            android:drawablePadding="@dimen/medium_padding"
            android:drawableTint="@color/inactive"
            android:text="@string/like"
            android:textColor="@color/inactive" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComment"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/medium_padding"
            android:drawableLeft="@drawable/sending_new_mail_bold"
            android:drawablePadding="@dimen/medium_padding"
            android:drawableTint="@color/inactive"
            android:text="@string/comment"
            android:textColor="@color/inactive" />


    </LinearLayout>

</LinearLayout>