<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/medium_padding"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAuthorImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/common_google_signin_btn_icon_dark_focused" />

        <TextView
            android:id="@+id/tvAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:text="@string/author_avatar"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small_padding"
        android:text="@string/lorem" />

    <!--<GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridView
            android:id="@+id/gvPostImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:numColumns="2"
            android:verticalSpacing="@dimen/smaller_padding" />
    </GridLayout>-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/small_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="11K" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="444 bình luận" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/smaller_padding">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLike"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/medium_padding"
            android:drawableLeft="@drawable/heart_line"
            android:drawablePadding="@dimen/medium_padding"
            android:drawableTint="@color/inactive"
            android:text="Chuchu"
            android:textColor="@color/inactive" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComment"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/medium_padding"
            android:drawableLeft="@drawable/sending_new_mail_bold"
            android:drawablePadding="@dimen/medium_padding"
            android:drawableTint="@color/inactive"
            android:text="Bình luận"
            android:textColor="@color/inactive" />


    </LinearLayout>

</LinearLayout>