<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.main.CreatePostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClose"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawableLeft="@drawable/close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/update_post_title"
                android:textAlignment="center"
                android:textSize="@dimen/medium_heading_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPostIt"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/smaller_padding"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/small_padding">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivAuthorImage"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/avatar" />

                    <TextView
                        android:id="@+id/tvAuthorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/small_padding"
                        android:text="Oggy"
                        android:textStyle="bold" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etPostContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_padding"
                    android:background="@null"
                    android:hint="@string/write_your_thinking"
                    android:inputType="text|textMultiLine"
                    android:paddingHorizontal="@dimen/small_padding"
                    android:paddingBottom="@dimen/large_padding"
                    android:textAlignment="viewStart"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/ivPostImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCreatePostOptions"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="-100dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/small_padding"
        android:theme="?bottomSheetDialogTheme"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPickImage"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/image_gallery"
            android:text="@string/add_image"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="5dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>